--- a/apps/sarccom-demo-app/src/index.html
+++ b/apps/sarccom-demo-app/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>SampleAdmin</title>
+    <title>Sarccom Demo App</title>
     <base href="/" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
